badges, swimmers, teams & sessions basic endpoints

--- a/config/locales/api.en.yml
+++ b/config/locales/api.en.yml
@@ -1,9 +1,15 @@
 en:
   api:
     message:
+      unauthorized: 'Unauthorized'
+      generic_ok: 'OK'
+      generic_failure: 'ERROR: unexpected failure'
+      invalid_token: 'Invalid API static token'
+      invalid_credentials: 'Invalid User credentials'
+      unconfirmed_email: 'Unconfirmed User email'
       status:
         ok: 'OK: reachable and running'
         maintenance: 'Maintenance mode is ON'
-        generic_failure: 'ERROR: unexpected failure'
       jwt:
+        missing: 'Missing JWT token'
         invalid: 'Invalid JWT token'
