added /tools/find_entry_time endpoint + minor updates

--- a/config/locales/api.en.yml
+++ b/config/locales/api.en.yml
@@ -2,6 +2,7 @@ en:
   api:
     message:
       unauthorized: 'Unauthorized'
+      invalid_parameter: 'Invalid parameter specified'
       generic_ok: 'OK'
       creation_failure: 'ERROR during creation'
       generic_failure: 'ERROR: unexpected failure'
